Replaced all paths for platform-folders

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "platform-folders": "^0.4.1"
   },
   "devDependencies": {},
   "scripts": {
