--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "commander": "^4.1.1",
     "fs-extra": "^8.1.0",
     "platform-folders": "^0.4.1"
   },
